--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linus Hawk</title>
+    <title>Kawinphop Chomnikorn</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -47,8 +47,8 @@
     <!-- Hero Section -->
     <section class="bg-gray-200 text-center py-20">
         <div class="container mx-auto">
-            <h2 class="text-4xl font-bold mb-4">Hello, My name is Linus Hawk. </h2>
-            <p class="text-xl mb-8">Game Developer</p>
+            <h2 class="text-4xl font-bold mb-4">Hello, I'm Green.</h2>
+            <p class="text-xl mb-8">Software Engineer</p>
             <a href="#projects" class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-700">View My Work</a>
         </div>
     </section>
@@ -98,7 +98,7 @@
     <!-- Footer Section -->
     <footer class="bg-gray-800 text-white py-6">
         <div class="container mx-auto text-center">
-            <p>&copy; 2024 Linus Hawk. All rights reserved.</p>
+            <p>&copy; 2024 Kawinphop Chomnikorn. All rights reserved.</p>
         </div>
     </footer>
 
