--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         Do you wanna be a Professor? NO! I'm not. I wanna to be a programmer. that's a point of my career. See ya!
                     </p>
             <div class="mt-8">
-                <a href="mailto:linushawk7@gmail.com" class="flex items-center justify-center text-gray-500 hover:text-blue-500 transition duration-300"><i class="fas fa-envelope mr-2"></i></a>
+                <a href="mailto:kawinphop.ch@kkumail.com" class="flex items-center justify-center text-gray-500 hover:text-blue-500 transition duration-300"><i class="fas fa-envelope mr-2"></i>kawinphop.ch@kkumail.com</a>
             </div>
         </div>
     </section>
