--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kawinphop Chomnikorn | Portfolio</title>
+  <title>kawin101 (Gongsun Green)</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <style>
@@ -23,7 +23,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/">Portfolio</a>
+      <a class="navbar-brand" href="/"> Kawin101 | Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -49,8 +49,9 @@
       <h2 class="text-left mb-4">About</h2>
       <img src="https://avatars.githubusercontent.com/u/76491614" width="350" height="350" alt="logo">
       <br/><br/>
-      <h3>Kawinphop Chomnikorn</h3>
-      <p><strong> -> Software Engineer</strong></p>
+      <h3>Gongsun Green</h3>
+      <p><strong> -> Bornr: </strong>Kawinphop Chomnikorn, Thailand</p>
+      <p><strong> -> Bio: </strong>Software Engineer at BOTNOI GROUP, Bangkok, Thailand.</p>
       <div class="container">
         <ui>
           <li>
@@ -118,6 +119,13 @@
           <h3>Experience</h3>
           <ul>
             <li>
+              <strong>June 2024 - Present :</strong>
+              <br><strong>Position:</strong> Software Engineer
+              <br><strong>Company:</strong> BOTNOI GROUP
+              <br><strong>Location:</strong> Bangkok, Thailand
+              <br>- Flutter & Dart for Mobile Application Development.
+              <hr/>
+            <li>
               <strong>Nov 2023 - Apr 2024 (6 months):</strong>
               <br><strong>Position:</strong> Teacher Assistant
               <br><strong>Company:</strong> Khon Kaen University
@@ -125,6 +133,7 @@
               <br>- Data Analysis and Data Visualization on Microsoft Excel & Power BI.
               <br>- Mobile Chatbot on AppScript (JavaScript/JSON) & Google Sheets.
               <br>- Database Management Programming on Flask (Python) & SQLite.
+              <hr/>
             <li>
               <strong>Apr 2023 - Jun 2023 (3 months):</strong>
               <br><strong>Position:</strong> UX/UI Designer Internship
@@ -140,6 +149,7 @@
               <br><a
                 href="https://www.canva.com/design/DAFoMeYjVS0/-SFRrsJ3dvYHpl4qtDS1aA/view?utm_content=DAFoMeYjVS0&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"
                 target="_blank"><i class="fas fa-eye"></i> View Project</a>
+              <hr/>
             </li>
           </ul>
           <p>...Waiting for update in the next time!</p>
