--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>kawin101 (Gongsun Green)</title>
+  <title>kawin101 (Kawinphop Chomnikorn)</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <style>
@@ -49,8 +49,7 @@
       <h2 class="text-left mb-4">About</h2>
       <img src="https://avatars.githubusercontent.com/u/76491614" width="350" height="350" alt="logo">
       <br/><br/>
-      <h3>Gongsun Green</h3>
-      <p><strong> -> Bornr: </strong>Kawinphop Chomnikorn, Thailand</p>
+      <h3>Kawinphop Chomnikorn</h3>
       <p><strong> -> Bio: </strong>Software Engineer at BOTNOI GROUP, Bangkok, Thailand.</p>
       <div class="container">
         <ui>
