--- a/index.html
+++ b/index.html
@@ -169,26 +169,24 @@
           <p><strong>**Up for learning a new programming language and new framework!</strong></p>
           <h3>Hard Skills</h3>
           <ul>
-            <li>Software Design, Database Design, User Interface Design, and User Experience Design.</li>
-            <li>Web Design & Mobile Design, Customer Journey, User Flow, and Wireframes.</li>
-            <li>Programming & Database</li>
+            <li>Full Stack Development</li>
+            <li>Web & Mobile Developer</li>
             <li>Data Structure & Algorithm</li>
-            <li>Git</li>
-            <li>Testing</li>
+            <li>Object Oriented Programming (OOP)</li>
           </ul>
 
           <h3>Technologies</h3>
           <ul>
-            <li><strong>Software Designs:</strong> Adobe XD, Figma, Framer, Wix and Miro</li>
-            <li><strong>Web:</strong> Python (Django), TypeScript (Angular), Express (Node.js), and PHP (Laravel).</li>
+            <li><strong>Web:</strong> Django (Python), Express (Node.js), Laravel (PHP), React (JavaScript), and Angular (TypeScript).</li>
             <li><strong>Mobile:</strong> Android Studio (Java) & Flutter (Dart).</li>
             <li><strong>IoT:</strong> ESP8266, Arduino (C++), and Raspberry Pi OS.</li>
             <li><strong>Game:</strong> Unity 3D (C#), Blender.</li>
+            <li><strong>Database:</strong> PostgreSQL, MySQL, MongoDB, and Firebase.</li>
             <li><strong>Server:</strong> XAMPP, Github Actions, and Mongoose.</li>
             <li><strong>OS:</strong> Linux and Windows.</li>
-            <li><strong>Software Tools:</strong> Microsoft Office, Power Query, Power BI, and Postman.</li>
-            <li><strong>Others:</strong> Google Map APIs, jQuery, Ajax, Bootstrap, Botnoi Chatbot, LINE Chatbot,
-              AppScript, and AppSheet.</li>
+            <li><strong>Software Tools:</strong> Microsoft Office, Power BI, and Postman.</li>
+            <li><strong>Software Designs:</strong> Adobe XD, Figma, WordPress, and Wix.</li>
+            <li><strong>Others:</strong> Git, RESTful API, Google Map APIs, jQuery, Ajax, Bootstrap, Botnoi Chatbot, LINE Chatbot, Botnoi Voice, AppScript, and AppSheet.</li>
           </ul>
         </div>
       </div>
