--- a/index.html
+++ b/index.html
@@ -75,16 +75,20 @@
                     <p>Software Engineer at BOTNOI GROUP, Bangkok, Thailand.</p>
                     <ul>
                         <li>
-                            <a href="mailto:25kawinphop@gmail.com" target="_blank"><i class="fas fa-envelope"></i> 25kawinphop@gmail.com</a>
+                            <a href="mailto:25kawinphop@gmail.com" target="_blank"><i class="fas fa-envelope"></i>
+                                25kawinphop@gmail.com</a>
                         </li>
                         <li>
-                            <a href="https://github.com/kawin101" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                            <a href="https://github.com/kawin101" target="_blank"><i class="fab fa-github"></i>
+                                GitHub</a>
                         </li>
                         <li>
-                            <a href="https://kawin101.github.io/" target="_blank"><i class="fas fa-globe"></i> Portfolio</a>
+                            <a href="https://kawin101.github.io/" target="_blank"><i class="fas fa-globe"></i>
+                                Portfolio</a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/profile.php?id=61564532357707" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+                            <a href="https://www.facebook.com/profile.php?id=61564532357707" target="_blank"><i
+                                    class="fab fa-facebook"></i> Facebook</a>
                         </li>
                         <li>
                             <a href="https://lin.ee/85nVZZI" target="_blank"><i class="fab fa-line"></i> LINE</a>
@@ -344,12 +348,14 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </section>
+        <footer class="bg-dark text-white text-center py-2 mt-1">
+            <div class="container">
+                <p>&copy; 2024 Kawinphop Chomnikorn. All Rights Reserved.</p>
+            </div>
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
