--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <br>- Flutter & Dart for Mobile Application Development.
                             <br>
                             <a href="https://play.google.com/store/apps/details?id=com.mobile.botnoivoice&pcampaignid=web_share"
-                                target="_blank"><i class="fas fa-eye"></i> View Project
+                                target="_blank"><i class="fab fa-google-play"></i> Google Play Store
                             </a>
                             <hr />
                         <li>
@@ -358,4 +358,5 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
