--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             align-items: center;
             min-height: 100vh;
             margin: 0;
+            padding: 0;
         }
 
         .container {
@@ -35,17 +36,18 @@
         }
 
         img {
-            padding: 25px;
+            padding: 10px;
+            max-width: 100%;
+            height: auto;
         }
     </style>
-
 </head>
 
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"> Kawin101 | Portfolio</a>
+                <a class="navbar-brand" href="/">Kawin101 | Portfolio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -66,33 +68,25 @@
             </div>
         </nav>
 
-        <section id="about" class="bg-light py-5">
-            <div style="display: flex; align-items: center;">
-                <img src="https://avatars.githubusercontent.com/u/76491614" width="250" height="250" alt="logo"
-                    style="margin-right: 20px;">
-                <div>
+        <section id="about" class="bg-light py-3">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-4 text-center">
+                    <img src="https://avatars.githubusercontent.com/u/76491614" class="img-fluid rounded-circle"
+                        alt="logo">
+                </div>
+                <div class="col-12 col-md-8">
                     <h3>Kawinphop Chomnikorn</h3>
                     <p>Software Engineer at BOTNOI GROUP, Bangkok, Thailand.</p>
                     <ul>
-                        <li>
-                            <a href="mailto:25kawinphop@gmail.com" target="_blank"><i class="fas fa-envelope"></i>
-                                25kawinphop@gmail.com</a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/kawin101" target="_blank"><i class="fab fa-github"></i>
-                                GitHub</a>
-                        </li>
-                        <li>
-                            <a href="https://kawin101.github.io/" target="_blank"><i class="fas fa-globe"></i>
-                                Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/profile.php?id=61564532357707" target="_blank"><i
-                                    class="fab fa-facebook"></i> Facebook</a>
-                        </li>
-                        <li>
-                            <a href="https://lin.ee/85nVZZI" target="_blank"><i class="fab fa-line"></i> LINE</a>
-                        </li>
+                        <li><a href="mailto:25kawinphop@gmail.com" target="_blank"><i class="fas fa-envelope"></i>
+                                25kawinphop@gmail.com</a></li>
+                        <li><a href="https://github.com/kawin101" target="_blank"><i class="fab fa-github"></i>
+                                GitHub</a></li>
+                        <li><a href="https://kawin101.github.io/" target="_blank"><i class="fas fa-globe"></i>
+                                Portfolio</a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61564532357707" target="_blank"><i
+                                    class="fab fa-facebook"></i> Facebook</a></li>
+                        <li><a href="https://lin.ee/85nVZZI" target="_blank"><i class="fab fa-line"></i> LINE</a></li>
                     </ul>
                 </div>
             </div>
@@ -100,7 +94,7 @@
 
         <section id="skills" class="bg-light py-1">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-12">
                     <h3>Experience</h3>
                     <ul>
                         <li>
@@ -114,6 +108,7 @@
                                 target="_blank"><i class="fab fa-google-play"></i> Google Play Store
                             </a>
                             <hr />
+                        </li>
                         <li>
                             <strong>Nov 2023 - Apr 2024 (6 months):</strong>
                             <br><strong>Position:</strong> Teacher Assistant
@@ -123,6 +118,7 @@
                             <br>- Mobile Chatbot on AppScript (JavaScript/JSON) & Google Sheets.
                             <br>- Database Management Programming on Flask (Python) & SQLite.
                             <hr />
+                        </li>
                         <li>
                             <strong>Apr 2023 - Jun 2023 (3 months):</strong>
                             <br><strong>Position:</strong> UX/UI Designer Internship
@@ -142,28 +138,22 @@
                             <hr />
                         </li>
                     </ul>
-                    </ul>
                 </div>
             </div>
         </section>
 
-        <section id="portfolio" class="bg-light py-5">
+        <section id="portfolio" class="bg-light py-3">
             <h2 class="text-left mb-4">Portfolio</h2>
             <div class="row">
-
-                <div class="col-md-12 mb-4">
+                <div class="col-12 mb-4">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Dog-friendly Hotel Search Web Application Development.</h5>
                             <p class="card-text">
-                                - <strong>Description:</strong> Graduation Project in Computer and Information Science.
-                                <br>
-                                - <strong>Keywords:</strong> Web Blog, E-Commerce, Front-end, Back-end, Hotel, Dog, and
-                                Google Map. <br>
+                                - <strong>Description:</strong> Graduation Project in Computer and Information
+                                Science.<br>
                                 - <strong>Skills:</strong> Web Development, Python (Django), JavaScript, Google Map
-                                APIs, jQuery,
-                                Bootstrap, Git, MySQL, XAMPP. <br>
-                                - <strong>Date:</strong> Jun 2023 - Apr 2024 (11 months)
+                                APIs, jQuery, Bootstrap, Git, MySQL, XAMPP.
                             </p>
                             <a href="https://github.com/Kawin101/Django_E-Commerce" target="_blank"
                                 class="btn btn-secondary">GitHub</a>
@@ -172,7 +162,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -188,7 +177,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -204,7 +192,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -225,7 +212,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -246,7 +232,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -261,7 +246,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -276,7 +260,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -300,7 +283,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -312,7 +294,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -327,7 +308,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-12 mb-4">
                     <div class="card">
                         <div class="card-body">
@@ -350,7 +330,7 @@
                 </div>
             </div>
         </section>
-        <footer class="bg-dark text-white text-center py-2 mt-1">
+        <footer class="bg-dark text-white text-center py-3 mt-4">
             <div class="container">
                 <p>&copy; 2024 Kawinphop Chomnikorn. All Rights Reserved.</p>
             </div>
@@ -358,5 +338,4 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
