--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kawin101 (Green K. Chomnikorn)</title>
+    <title>kawin101 (Kawinphop Chomnikorn)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
@@ -75,7 +75,7 @@
                         alt="logo">
                 </div>
                 <div class="col-12 col-md-8">
-                    <h3>Green Kawinphop Chomnikorn</h3>
+                    <h3>Kawinphop Chomnikorn</h3>
                     <p>Software Engineer at BOTNOI GROUP, Bangkok, Thailand.</p>
                     <ul>
                         <li><a href="mailto:kawinphop.ch@kkumail.com" target="_blank"><i class="fas fa-envelope"></i>
