--- a/index.html
+++ b/index.html
@@ -2,45 +2,14 @@
 <html lang="en">
 
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5T2PQELT0T"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-5T2PQELT0T');
-    </script>
     <meta charset="UTF-8">
+    <meta name="keywords" content="Kawinphop Chomnikorn, kawin101, Botnoi, Flutter, Java, Dart, Firebase, Portfolio, Web Development, Mobile Development, Android, iOS, Chatbot, Fastwork">
+    <meta name="description" content="Portfolio of Kawinphop Chomnikorn, a Software Engineer at Botnoi Group. Experienced in Flutter, Java, Dart, Firebase, and mobile application development.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kawin101 (Kawinphop Chomnikorn)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            max-width: 800px;
-            text-align: left;
-        }
-
-        #about,
-        #skills,
-        #portfolio {
-            padding: 25px;
-        }
-
-        img {
-            padding: 10px;
-            max-width: 100%;
-            height: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -336,5 +305,7 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5T2PQELT0T"></script>
+    <script async src="./scripts/main.js"></script>
 </body>
 </html>
