--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="Kawinphop Chomnikorn, kawin101, Botnoi, Flutter, Java, Dart, Firebase, Portfolio, Web Development, Mobile Development, Android, iOS, Chatbot, Fastwork">
-    <meta name="description" content="Portfolio of Kawinphop Chomnikorn, a Software Engineer at Botnoi Group. Experienced in Flutter, Java, Dart, Firebase, and mobile application development.">
+    <meta name="keywords" content="Kawinphop Chomnikorn, kawin101, Botnoi, Flutter, Dart, Mobile Developer, Fastwork">
+    <meta name="description" content="Portfolio of Kawinphop Chomnikorn, a Software Engineer at Botnoi Group. Experienced in Flutter, Dart, Firebase, and Mobile Application Development.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kawin101 (Kawinphop Chomnikorn)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
