--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <h3>Kawinphop Chomnikorn</h3>
                     <p>Software Engineer at BOTNOI GROUP, Bangkok, Thailand.</p>
                     <ul>
-                        <li><a href="mailto:kawinphop.ch@kkumail.com" target="_blank"><i class="fas fa-envelope"></i>
-                                kawinphop.ch@kkumail.com</a></li>
+                        <li><a href="mailto:kawinphop.chomnikorn@gmail.com" target="_blank"><i class="fas fa-envelope"></i>
+                                kawinphop.chomnikorn@gmail.com</a></li>
                         <li><a href="https://github.com/kawin101" target="_blank"><i class="fab fa-github"></i>
                                 GitHub</a></li>
                         <li><a href="https://kawin101.github.io/" target="_blank"><i class="fas fa-globe"></i>
