[Update] Canva Link of Traniee Project 2023

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 on Python.
                 <br />
                 <a
-                  href="https://www.canva.com/design/DAFoMeYjVS0/-SFRrsJ3dvYHpl4qtDS1aA/view?utm_content=DAFoMeYjVS0&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"
+                  href="https://www.canva.com/design/DAFoMeYjVS0/n7h69B_ANEygepb0vwtI0Q/view?utm_content=DAFoMeYjVS0&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h0606ad572f"
                   target="_blank"
                   ><i class="fas fa-eye"></i> View Project
                 </a>
