[Add] Dynamic Year in Footer

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       </section>
       <footer class="bg-dark text-white text-center py-3 mt-4">
         <div class="container">
-          <p>&copy; 2024 Kawinphop Chomnikorn. All Rights Reserved.</p>
+          <p>Copyright &copy; <span id="year"></span> Kawinphop Chomnikorn. All Rights Reserved.</p>
         </div>
       </footer>
     </div>
