--- a/index.html
+++ b/index.html
@@ -25,22 +25,40 @@
 
   <body>
     <!-- Modal -->
-    <div class="modal fade" id="welcomeModal" tabindex="-1" aria-labelledby="welcomeModalLabel" aria-hidden="true">
+    <div
+      class="modal fade"
+      id="welcomeModal"
+      tabindex="-1"
+      aria-labelledby="welcomeModalLabel"
+      aria-hidden="true"
+    >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="welcomeModalLabel">
-              👋 Hi, I'm Green
-            </h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h5 class="modal-title" id="welcomeModalLabel">👋 Hi, I'm Green</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body text-center">
             <p id="countdown"></p>
-            <a href="mailto:kawinphop.chomnikorn@gmail.com" class="btn btn-primary btn-lg" target="_blank">
+            <a
+              href="mailto:kawinphop.chomnikorn@gmail.com"
+              class="btn btn-primary btn-lg"
+              target="_blank"
+            >
               <i class="fas fa-envelope"></i> Contact Me
             </a>
             <div class="mt-3">
-              <a href="./assets/resume_kawinphop_chomnikorn.pdf" class="btn btn-secondary btn-lg" download target="_blank">
+              <a
+                href="./assets/resume_kawinphop_chomnikorn.pdf"
+                class="btn btn-secondary btn-lg"
+                download
+                target="_blank"
+              >
                 <i class="fas fa-file-pdf"></i> Download My's Resume
               </a>
             </div>
@@ -48,6 +66,7 @@
         </div>
       </div>
     </div>
+
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
         <div class="container-fluid">
@@ -80,6 +99,28 @@
           </div>
         </div>
       </nav>
+
+      <section id="welcome" class="bg-light py-3 text-center">
+        <h5 class="modal-title">👋 Hi, I'm Green</h5>
+        <p id="countdown"></p>
+        <a
+          href="mailto:kawinphop.chomnikorn@gmail.com"
+          class="btn btn-primary btn-lg"
+          target="_blank"
+        >
+          <i class="fas fa-envelope"></i> Contact Me
+        </a>
+        <div class="mt-3">
+          <a
+            href="./assets/resume_kawinphop_chomnikorn.pdf"
+            class="btn btn-secondary btn-lg"
+            download
+            target="_blank"
+          >
+            <i class="fas fa-file-pdf"></i> Download My's Resume
+          </a>
+        </div>
+      </section>
 
       <section id="about" class="bg-light py-3">
         <div class="row align-items-center">
@@ -517,12 +558,17 @@
       </section>
       <footer class="bg-dark text-white text-center py-3 mt-4">
         <div class="container">
-          <p>Copyright &copy; 2025 Kawinphop Chomnikorn. All Rights Reserved.</p>
+          <p>
+            Copyright &copy; 2025 Kawinphop Chomnikorn. All Rights Reserved.
+          </p>
         </div>
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5T2PQELT0T"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-5T2PQELT0T"
+    ></script>
     <script async src="./scripts/main.js"></script>
   </body>
 </html>
